aws ec2 배포 환경으로 변경